--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Odin Landing Page</title>
+        <meta charset="UTF-8"/>
+    </head>
 
+    <body>
+        <header>
+
+        </header>
+
+        <div class="description">
+
+        </div>
+
+        <div class="information">
+
+        </div>
+
+        <div class="testimonials">
+
+        </div>
+
+        <div class="sign up prompt">
+
+        </div>
+
+        <footer>
+            
+        </footer>
+
+    </body>
+</html>
