--- a/index.html
+++ b/index.html
@@ -7,27 +7,55 @@
 
     <body>
         <header>
+            <ul>
+                <li>Header logo</li>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
 
         </header>
 
         <div class="description">
-
+            <h1>
+                This Website Is Awesome
+            </h1>
+            <h4>
+                This website hase some subtext that goes here under the main title.
+                It's a smaller font and the color is lower contrast.
+            </h4>
+            <button>Sign up</button>
         </div>
 
         <div class="information">
-
+            <h1>Some random information.</h1>
+            <div>
+                <h4>this is some subtext under and image or illustration</h4>
+            </div>
+            <div>
+                <h4>this is some subtext under and image or illustration</h4>
+            </div>
+            <div>
+                <h4>this is some subtext under and image or illustration</h4>
+            </div>
+            <div>
+                <h4>this is some subtext under and image or illustration</h4>
+            </div>
         </div>
 
         <div class="testimonials">
-
+            <h1>This is an inspiring quote, or a testimonial from a customer.</h1>
+            <h4>-Guys Name</h4>
         </div>
 
         <div class="sign up prompt">
-
+            <h2>Call to action time!</h2>
+            <h4>sign up for our product or else</h4>
+            <button>Sign up</button>
         </div>
 
         <footer>
-            
+            <h6>copyright @ The Odin Project 2022</h6>
         </footer>
 
     </body>
